# edgestream

./: .Rbuildignore  .gitignore  DESCRIPTION  MANIFEST.in  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pages.yml  release.yml
R/: RcppExports.R  edgestream.R  streamgraph.R
bench/: compare.py  micro.py
docs/: benchmarks.md  file-format.md  index.md  python.md  r.md  reference.md
edgestream/: __init__.py  __init__.pyi  _edgestream.pyi
man/: add_edge.Rd  add_edges.Rd  add_node.Rd  all_local_triangles.Rd  as_igraph.Rd  avg_clustering.Rd  avg_degree.Rd  betweenness_approx.Rd  clear_graph.Rd  clustering_coefficient.Rd  component_id.Rd  component_ids.Rd  component_nodes.Rd  component_size.Rd  copy_graph.Rd  degree.Rd  degree_histogram.Rd  density.Rd  edge_list.Rd  edge_weight.Rd  edgestream-package.Rd  from_igraph.Rd  get_id.Rd  get_key.Rd  has_edge.Rd  has_key.Rd  in_degree.Rd  in_neighbours.Rd  load_graph.Rd  local_triangles.Rd  max_degree.Rd  n_components.Rd  n_edges.Rd  n_ids.Rd  n_indexed.Rd  n_nodes.Rd  n_strong_components.Rd  neighbours.Rd  node_id.Rd  node_index.Rd  (+16 more)
paper/: paper.bib  paper.md
src/: Makevars  RcppExports.cpp  batch.cpp  betweenness.cpp  bindings_python.cpp  bindings_r.cpp  centrality.cpp  dsu.cpp  dsu.h  edgestream.cpp  edgestream.h  flat_hash_set.h  serialise.cpp  streamgraph.cpp  streamgraph.h  triangle.cpp
streamgraph/: __init__.py  _streamgraph.pyi
tests/: test_core_standalone.cpp  test_dsu_standalone.cpp  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5_directed.py  test_phase6_features.py  test_phase7_release.py  test_property_networkx.py  testthat.R
tests/testthat/: test-batch.R  test-betweenness.R  test-components.R  test-directed.R  test-features.R  test-nodeindex.R  test-release.R  test-serialise.R  test-triangles.R
vignettes/: edgestream.Rmd
